Prediction Binom Update

--- a/templates/closest_matches.html
+++ b/templates/closest_matches.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}Closes Matches{% endblock %}
+{% block title %}Closest Matches{% endblock %}
 
 {% block content %}
 
