--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -38,11 +38,10 @@
                 <td style="width: 70%;">{{ armwrestler[1] }}</td>
                 <td style="width: 10%;" class="text-end"><strong>{{ armwrestler[2] }}</strong></td>
                 {% if username %}
-                <td style="width: 15%;">
-                    <form class="text-center" action="{{ url_for('remove_member') }}" method="POST">
-                        <input type="hidden" name="name" value="{{ armwrestler[1] }}">
-                        <button type="submit" class="btn btn-danger btn-sm">Remove</button>
-                    </form>
+                <td style="width: 15%;" class="text-center">
+                    <button type="button" class="btn btn-danger btn-sm" 
+                    hx-post="{{ url_for('confirm_remove', name=armwrestler[1]) }}" hx-target="#confirmModalRemove" hx-trigger="click" 
+                    data-bs-toggle="modal" data-bs-target="#confirmModal">Remove</button>
                 </td>
                 {% endif %}
             </tr>
@@ -55,4 +54,17 @@
     The number of points won/lost after a match depends on the expected outcome of the match.
     If a lower-rated armwrestler wins against a higher-rated armwrestler, they gain more points than if they won against someone of equal or lower rating.
 </div>
+
+<div class="modal fade" id="confirmModal" tabindex="-1" aria-labelledby="confirmModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="confirmModalLabel">Confirm Removal</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div id="confirmModalRemove"></div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
