Added cards closest matches

--- a/templates/prediction_partial.html
+++ b/templates/prediction_partial.html
@@ -94,8 +94,8 @@
     <div class="row mb-4">
         <div class="col">
             <div class="progress" style="height: 2.5rem;" >
-                <div class="progress-bar bg-{{ armwrestler_color[0] }}" role="progressbar" style="width: {{ binom_predicted_1 }}%" aria-valuenow="{{ binom_predicted_1 }}" aria-valuemin="0" aria-valuemax="100">{{ binom_predicted_1 }}%</div>
-                <div class="progress-bar bg-{{ armwrestler_color[1] }}" role="progressbar" style="width: {{ binom_predicted_2 }}%" aria-valuenow="{{ binom_predicted_2 }}" aria-valuemin="0" aria-valuemax="100">{{ binom_predicted_2 }}%</div>
+                <div class="progress-bar bg-{{ armwrestler_color[0] }}" role="progressbar" style="width: {{ binom_predicted_1 }}%" aria-valuenow="{{ binom_predicted_1 }}" aria-valuemin="0" aria-valuemax="100"><strong>{{ binom_predicted_1 }}%</strong></div>
+                <div class="progress-bar bg-{{ armwrestler_color[1] }}" role="progressbar" style="width: {{ binom_predicted_2 }}%" aria-valuenow="{{ binom_predicted_2 }}" aria-valuemin="0" aria-valuemax="100"><strong>{{ binom_predicted_2 }}%</strong></div>
             </div>
         </div>
     </div>
