--- a/templates/closest_matches.html
+++ b/templates/closest_matches.html
@@ -8,43 +8,53 @@
 
 <p>The top 15 closest matches between ranked armwrestlers based on the ELO scores.</p>
 
-<div class="btn-group btn-group-toggle mb-2 w-100" data-toggle="buttons">
+<div class="btn-group btn-group-toggle mb-4 w-100" data-toggle="buttons">
     <a href="{{ url_for('closest_matches', arm='right') }}" 
        class="btn btn-primary w-50 {{ 'active' if arm == 'right' else '' }}" role="button" aria-pressed="{{ 'true' if arm == 'right' else 'false' }}">Right arm</a>
     <a href="{{ url_for('closest_matches', arm='left') }}"
        class="btn btn-primary w-50 {{ 'active' if arm == 'left' else '' }}" role="button" aria-pressed="{{ 'true' if arm == 'left' else 'false' }}">Left arm</a>
 </div>
 
-<div class="table-responsive rounded">
-    <table class="table">
-        <thead class="table-dark">
-            <tr>
-                <th style="width: 40%;">Armwrestlers</th>
-                <th style="width: 2%;"></th>
-                <th style="width: 40%;"></th>
-                <th class='text-center' style="width: 10%;">Win chance</th>
-                <th class='text-center text-nowrap' style="width: 8%;">ΔELO</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for match in closest_matches_with_predictions %}
-            <tr>
-                <td class="align-middle" style="width: 40%;">
-                    <strong>#{{ match[0] }}</strong> {{ match[1] }}<strong>({{ match[2] }})</strong>
-                </td>
-                <td class="align-middle" style="width: 2%;">vs</td>
-                <td class="align-middle" style="width: 40%;">
-                    <strong>#{{ match[3] }}</strong> {{ match[4] }}<strong>({{ match[5] }})</strong>
-                </td>
-                <td class="text-nowrap text-center align-middle" style="width: 10%;">
+{% for match in closest_matches_with_predictions %}
+<div class="col-12 mb-4">
+    <div class="card">
+        <div class="card-header bg-transparent">
+            <div class="row mt-2">
+                <div class="col-12 col-lg-auto text-center mb-2">
+                    <div class="text-nowrap">
+                        <strong>#{{ match[0] }}</strong> {{ match[1] }} <strong>({{ match[2] }})</strong>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-auto text-center mb-2">
+                    <span class="badge bg-dark">VS</span>
+                </div>
+                <div class="col-12 col-lg-auto text-center mb-2">
+                    <div class="text-nowrap">
+                        <strong>#{{ match[3] }}</strong> {{ match[4] }} <strong>({{ match[5] }})</strong>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card-body">
+            <div class="card-text">
+                <div class="mb-2">
+                    Win chance:
                     <span class="fs-6 badge text-{{ match[9] }}">{{ match[7] }}%</span>:<span class="fs-6 badge text-{{ match[10] }}">{{ match[8] }}%</span>
-                </td>
-                <td class="text-nowrap text-center align-middle" style="width: 8%;">
-                    <strong>{{ match[6] }}</strong>
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+                </div>
+                <div class="col mx-auto mb-2">
+                    <div class="progress" style="height: 2rem;" >
+                        <div class="progress-bar bg-{{ match[9] }}" role="progressbar" style="width: {{ match[7] }}%" aria-valuenow="{{ match[7] }}" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar bg-{{ match[10] }}" role="progressbar" style="width: {{ match[8] }}%" aria-valuenow="{{ match[8] }}" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+                <div class="mb-2">
+                    ELO difference: <strong>{{ match[6] }}</strong>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+{% endfor %}
+
+
 {% endblock %}
