--- a/templates/closest_matches.html
+++ b/templates/closest_matches.html
@@ -16,7 +16,7 @@
 </div>
 
 {% for match in closest_matches_with_predictions %}
-<div class="col-12 mb-4">
+<div class="col-12 mb-3">
     <div class="card">
         <div class="card-header bg-transparent">
             <div class="row mt-2">
@@ -37,18 +37,14 @@
         </div>
         <div class="card-body">
             <div class="card-text">
-                <div class="mb-2">
-                    Win chance:
-                    <span class="fs-6 badge text-{{ match[9] }}">{{ match[7] }}%</span>:<span class="fs-6 badge text-{{ match[10] }}">{{ match[8] }}%</span>
-                </div>
-                <div class="col mx-auto mb-2">
-                    <div class="progress" style="height: 2rem;" >
-                        <div class="progress-bar bg-{{ match[9] }}" role="progressbar" style="width: {{ match[7] }}%" aria-valuenow="{{ match[7] }}" aria-valuemin="0" aria-valuemax="100"></div>
-                        <div class="progress-bar bg-{{ match[10] }}" role="progressbar" style="width: {{ match[8] }}%" aria-valuenow="{{ match[8] }}" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="row justify-content-start">
+                    <div class="col-12 col-lg-auto mb-2 mb-lg-0 align-items-center">
+                        Win chance:
+                        <span class="fs-6 badge text-{{ match[9] }}">{{ match[7] }}%</span>|<span class="fs-6 badge text-{{ match[10] }}">{{ match[8] }}%</span>
                     </div>
-                </div>
-                <div class="mb-2">
-                    ELO difference: <strong>{{ match[6] }}</strong>
+                    <div class="col-12 col-lg-auto mb-2 mb-lg-0 align-items-center">
+                        ELO difference: <strong>{{ match[6] }}</strong>
+                    </div>
                 </div>
             </div>
         </div>
