--- a/templates/prediction_partial.html
+++ b/templates/prediction_partial.html
@@ -43,8 +43,7 @@
                     <option value="none">Choose Armwrestler 1</option>
                 </select>
             {% endif %}
-            
-            
+             
         </div>
     </div>
 
@@ -70,7 +69,7 @@
         <div class="col"></div>
     </div>
     <label for="exprected_score" class="form-label mb-2">Approximate expected score:</label>
-    <div class="row mb-4">
+    <div class="row mb-2">
         <div class="col d-flex justify-content-center align-items-center"></div>
 
         <div class="col d-flex justify-content-center align-items-center">
@@ -94,8 +93,8 @@
     <div class="row mb-4">
         <div class="col">
             <div class="progress" style="height: 2.5rem;" >
-                <div class="progress-bar bg-{{ armwrestler_color[0] }}" role="progressbar" style="width: {{ binom_predicted_1 }}%" aria-valuenow="{{ binom_predicted_1 }}" aria-valuemin="0" aria-valuemax="100"><strong>{{ binom_predicted_1 }}%</strong></div>
-                <div class="progress-bar bg-{{ armwrestler_color[1] }}" role="progressbar" style="width: {{ binom_predicted_2 }}%" aria-valuenow="{{ binom_predicted_2 }}" aria-valuemin="0" aria-valuemax="100"><strong>{{ binom_predicted_2 }}%</strong></div>
+                <div class="progress-bar bg-{{ armwrestler_color[0] }} fs-6" role="progressbar" style="width: {{ binom_predicted_1 }}%" aria-valuenow="{{ binom_predicted_1 }}" aria-valuemin="0" aria-valuemax="100"><strong>{{ binom_predicted_1 }}%</strong></div>
+                <div class="progress-bar bg-{{ armwrestler_color[1] }} fs-6" role="progressbar" style="width: {{ binom_predicted_2 }}%" aria-valuenow="{{ binom_predicted_2 }}" aria-valuemin="0" aria-valuemax="100"><strong>{{ binom_predicted_2 }}%</strong></div>
             </div>
         </div>
     </div>
