--- a/templates/elo_from_match.html
+++ b/templates/elo_from_match.html
@@ -6,10 +6,10 @@
 <div class="mx-auto" style="max-width: 800px;">
     <h2 class="mb-4">ELO from match</h2>
     <div class="alert alert-secondary" role="alert">
-        <strong>Ranked example: </strong>If there was a supermatch between two [Ranked] armwrestlers, the ELO points gained or lost are determined by the outcome of this match.<br>                           
+        <strong>Ranked example: </strong>If there was a match between two [Ranked] armwrestlers, the ELO points gained or lost are determined by the outcome of this match.<br>                           
         <strong>Unranked example: </strong>If an [Unranked person] beats a [Ranked person] in a match, they would receive an estimated ELO rating based on the score of that specific single match.
     </div>    
-    <form class="mb-4" method="POST" action="{{ url_for('elo_from_match') }}" hx-post="{{ url_for('elo_from_match') }}" hx-trigger="change" hx-swap="outerHTML">
+    <form class="mb-4" hx-post="{{ url_for('elo_from_match') }}" hx-trigger="change" hx-swap="outerHTML">
         <label for="ranked" class="form-label">Choose ranked or unranked:</label>
         <div class="btn-group btn-group-toggle mb-2 w-100" data-toggle="buttons">
             <label class="btn btn-primary w-50 {{ 'active' if ranked == 'ranked' else '' }}">
