--- a/templates/add_new_member_name_display.html
+++ b/templates/add_new_member_name_display.html
@@ -1,1 +1,3 @@
-<div class="form-control text-secondary text-nowrap overflow-hidden" id="new_member" name="new_member" disabled aria-disabled="true">{{ name or 'Enter a name...' }}</div>
+<div class="form-control text-secondary text-nowrap overflow-hidden" id="new_member" name="new_member" disabled aria-disabled="true">
+    {{ name or 'Enter a name...' }}
+</div>
