--- a/templates/add_new_member_partial.html
+++ b/templates/add_new_member_partial.html
@@ -1,4 +1,4 @@
-<form class="mb-4" hx-post="{{ url_for('add_new_member') }}" hx-trigger="change" hx-swap="outerHTML">
+<form class="mb-4" method="POST" action="{{ url_for('add_new_member') }}" hx-post="{{ url_for('add_new_member') }}" hx-trigger="change" hx-swap="outerHTML">
     <div class="mx-auto" style="max-width: 400px;">
         <div class="mb-2">
             <label for="name" class="form-label">Name</label>
