--- a/templates/supermatch.html
+++ b/templates/supermatch.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="mx-auto" style="max-width: 800px;">
     <h2 class="mb-4">Supermatch</h2>
-    <form class="mb-4" hx-post="{{ url_for('supermatch') }}" hx-trigger="change" hx-swap="outerHTML">
+    <form class="mb-4" method="POST" action="{{ url_for('supermatch') }}" hx-post="{{ url_for('supermatch') }}" hx-trigger="change" hx-swap="outerHTML">
         <!-- Arm selection buttons -->
         <label for="arm" class="form-label">Choose arm for the supermatch:</label>
         <div class="btn-group btn-group-toggle mb-2 w-100" data-toggle="buttons">
