--- a/templates/prediction_partial.html
+++ b/templates/prediction_partial.html
@@ -1,4 +1,4 @@
-<form class="mb-4" hx-post="{{ url_for('prediction') }}" hx-trigger="change" hx-swap="outerHTML">
+<form class="mb-4" hx-get="{{ url_for('prediction') }}" hx-trigger="change" hx-swap="outerHTML" hx-push-url="true">
     <!-- Arm selection buttons -->
     <label for="arm" class="form-label">Choose arm for the prediction:</label>
     <div class="btn-group btn-group-toggle mb-2 w-100" data-toggle="buttons">
